--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -44,6 +44,39 @@ section {
 	padding: 100px 80px;
 }
 
+section:not(.hero):nth-child(even){
+	background-color: #f5f5f5;
+}
+.grid{
+	width: 100%;
+	display: flex;
+	flex-wrap: wrap;
+	padding: 100px 80px;
+}
+
+
+hr{
+	width: 250px;
+	height: 3px;
+	background-color: #3f51b5;
+	border:0;
+	margin-bottom: 50px;
+}
+
+section h3.title{
+	text-transform: capitalize;
+	font: bold 32px "Open Sans" sans-serif;
+	margin-bottom: 30px;
+	text-align: center;
+}
+
+section p{
+	min-width: 775px;
+	line-height: 2;
+	padding: 0 20px;
+	margin-bottom: 30px;
+	text-align: center;
+}
 /*Header Styles*/
 
 header {
@@ -123,4 +156,32 @@ header nav li {
 		opacity: 1;
 		margin: 0;
 	}
+}
+
+/* Destinationns Section  */
+
+.destinations .grid li{
+	height: 350px;
+	padding: 20px;
+	background-clip: content-box;
+	background-size: cover;
+	background-position: center;
+}
+.destinations .grid li:nth-child(1){
+	background-image: url(../img/mountain1.jpg);
+}
+.destinations .grid li:nth-child(2){
+	background-image: url(../img/mountain2.jpg);
+}
+.destinations .grid li:nth-child(3){
+	background-image: url(../img/mountain3.jpg);
+}
+.destinations .grid li:nth-child(4){
+	background-image: url(../img/mountain4.jpg);
+}
+.destinations .grid li.small{
+	flex-basis: 30%;
+}
+.destinations .grid li.large{
+	flex-basis: 70%;
 }
