--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -10,7 +10,7 @@ html {
 	font: normal 16px sans-serif;
 	color: #555;
 }
-
+ul,
 nav {
 	list-style: none;
 }
@@ -54,12 +54,11 @@ section:not(.hero):nth-child(even){
 	padding: 100px 80px;
 }
 
-
 hr{
 	width: 250px;
 	height: 3px;
 	background-color: #3f51b5;
-	border:0;
+	border: 0;
 	margin-bottom: 50px;
 }
 
@@ -184,4 +183,21 @@ header nav li {
 }
 .destinations .grid li.large{
 	flex-basis: 70%;
+}
+
+/* Packages Sections  */
+
+.packages .grid li{
+	padding: 50px;
+	flex-basis: 50%;
+	text-align: center;
+}
+
+.packages .grid li i{
+	color: #8c9eff;
+}
+
+.packages .grid li h4{
+	font-size: 30px;
+	margin: 25px 0s;
 }
