--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -64,9 +64,10 @@ hr{
 
 section h3.title{
 	text-transform: capitalize;
-	font: bold 32px "Open Sans" sans-serif;
+	font: bold 32px "Open Sans", sans-serif;
 	margin-bottom: 30px;
 	text-align: center;
+
 }
 
 section p{
@@ -157,6 +158,24 @@ header nav li {
 	}
 }
 
+@media (max-width: 800px) {
+	.hero {
+		min-height: 600px;
+	}
+
+	.hero h1 {
+		font-size: 48px;
+	}
+
+	.hero h3 {
+		font-size: 24px;
+	}
+
+	.hero a.btn {
+		padding: 15px 40px;
+	}
+}
+
 /* Destinationns Section  */
 
 .destinations .grid li{
@@ -185,6 +204,20 @@ header nav li {
 	flex-basis: 70%;
 }
 
+@media (max-width: 1100px) {
+	.destinations .grid li.small,
+	.destinations .grid li.large {
+		flex-basis: 50%;
+	}
+}
+
+@media (max-width: 800px) {
+	.destinations .grid li.small,
+	.destinations .grid li.large {
+		flex-basis: 100%;
+	}
+}
+
 /* Packages Sections  */
 
 .packages .grid li{
@@ -202,6 +235,13 @@ header nav li {
 	margin: 25px 0s;
 }
 
+@media (max-width: 800px){
+	.packages .grid li{
+		flex-basis: 100%;
+		padding: 20px;
+	}
+}
+
 /* Testimonials Sections  */
 
 .testimonials .quote {
@@ -211,6 +251,16 @@ header nav li {
 	margin: 40px 0 25px;
 }
 
+@media (max-width: 800px) {
+	.testimonials .quote {
+		font-size: 18px;
+		margin: 15px 0;
+	}
+
+	.testimonials .author {
+		font-size: 14px;
+	}
+}
 
 /* Contact Section */
 
@@ -233,3 +283,51 @@ header nav li {
 	color: #555;
 	flex: 1;
 }
+
+@media (max-width: 1000px) {
+	.contact form input {
+		flex-basis: 100%;
+		margin: 0 0 20px 0;
+	}
+}
+
+/* Footer Section  */
+
+footer{
+	display: flex;
+	align-items: center;
+	justify-content: space-around;
+	background-color: #607d8b;
+	color: #fff;
+	padding: 20px 0;
+}
+
+footer ul{
+	display: flex;
+}
+
+footer ul li{
+	margin-left: 16px;
+}
+
+footer p{
+	text-transform: uppercase;
+	font-size: 14px;
+	opacity: 0.6;
+	align-self: center;
+}
+
+@media (max-width: 1100px) {
+	footer {
+		flex-direction: column;
+	}
+
+	footer p {
+		text-align: center;
+		margin-bottom: 20px;
+	}
+
+	footer ul li {
+		margin: 0 8px;
+	}
+} 
