--- a/assets/css/styles.css
+++ b/assets/css/styles.css
@@ -71,11 +71,17 @@ section h3.title{
 }
 
 section p{
-	min-width: 775px;
+	max-width: 775px;
 	line-height: 2;
 	padding: 0 20px;
 	margin-bottom: 30px;
 	text-align: center;
+}
+
+@media (max-width: 800px){
+	section{
+		padding: 50px 20px;
+	}
 }
 /*Header Styles*/
 
@@ -110,6 +116,16 @@ header nav li {
 	margin: 0 15px;
 }
 
+@media (max-width: 800px){
+header{
+	padding: 20px 50px;
+	flex-direction: column;
+}
+header h2 {
+	margin-bottom: 15px;
+
+}
+}
 /*Hero Styles*/
 
 .hero {
@@ -186,16 +202,16 @@ header nav li {
 	background-position: center;
 }
 .destinations .grid li:nth-child(1){
-	background-image: url(../img/mountain1.jpg);
+	background-image: url(../img/mountain1.jpeg);
 }
 .destinations .grid li:nth-child(2){
-	background-image: url(../img/mountain2.jpg);
+	background-image: url(../img/mountain2.jpeg);
 }
 .destinations .grid li:nth-child(3){
-	background-image: url(../img/mountain3.jpg);
+	background-image: url(../img/mountain3.jpeg);
 }
 .destinations .grid li:nth-child(4){
-	background-image: url(../img/mountain4.jpg);
+	background-image: url(../img/mountain4.jpeg);
 }
 .destinations .grid li.small{
 	flex-basis: 30%;
